# quine-apple

./: .gitignore  LICENSE  Makefile  README.md  a.out  ba_frame_gen.py  ba_frame_gen_alt.py  download_BA.sh  encoded_frames.txt  generate_quine.hs  generate_quine.py  quine.c  quine.pack.c  quine.quine.c  quine.sh  quine_staging.c
ba_c_frames/: a.out  bad_apple.c
bad_apple_processing/: bitmap.py
hMini/: LICENSE  hMini.cabal
hMini/app/: Main.hs  Minifier.hs
hMini/test/: Spec.hs
